[metadata]
name = pesto-cli
description = "XXX"
version = 0.1.dev0
author = Pesto
author_email = contact@pesto.garden
url = https://github.com/pesto-garden/cli
long_description = file: README.md
keywords = cli
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: AGPL
    Natural Language :: English

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    click~=8.1.0
    requests~=2.32.3

[options.entry_points]
console_scripts =
	pestoctl = pesto_cli.cli:cli

[options.extras_require]
dev =
    black


[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests
